--- a/transfer-client/pom.xml
+++ b/transfer-client/pom.xml
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>life.pisay</groupId>
             <artifactId>transfer-common</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
