1.新增传输插件:文件监听器 2.发布v1.1.0 3.更新项目描述

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>transfer-client</module>
         <module>transfer-server</module>
         <module>transfer-common</module>
+        <module>transfer-plugin</module>
     </modules>
 
     <properties>
@@ -21,7 +22,8 @@
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <revision>1.0.0</revision>
+        <!-- 版本号定义 -->
+        <revision>1.1.0</revision>
     </properties>
 
     <dependencies>
