--- a/transfer-client/pom.xml
+++ b/transfer-client/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>transfer-client</artifactId>
+    <description>A file transfer client.</description>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
